prevent long names to overflow

--- a/src/features/Layout/Sidebar/FacetActionsWrapper/FacetActionsWrapper.module.scss
+++ b/src/features/Layout/Sidebar/FacetActionsWrapper/FacetActionsWrapper.module.scss
@@ -1,7 +1,20 @@
 
 .facetActionsWrapper {
 
+    display: grid;
+    grid-template-columns: auto 30px;
+
     &:hover {
         font-weight: bold;
+    }
+
+    &__buttons {
+        padding: 0 5px;
+        display: flex;
+        align-items: center;
+    }
+
+    &__content {
+        overflow-x: hidden;
     }
 }
