--- a/src/features/Resources/Modals/RenameResource/RenameResource.module.scss
+++ b/src/features/Resources/Modals/RenameResource/RenameResource.module.scss
@@ -3,7 +3,6 @@
     &__edit {
         display: inline;
         border-radius: 0.28rem;
-        float: right;
         margin-right: 10px;
 
         i {
